--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <nav>
-            <div class="container">
+        <div class="container">
+            <nav>
                 <div class="logo">
                     <h1>Final English Assignment By Rizky</h1>
                 </div>
@@ -20,47 +20,42 @@
                     <li><a href="#materials">Materials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
 
     <section id="home">
         <div class="container">
+            <h2>Hello, my name is Rizky</h2>
             <div class="profile">
                 <img src="profile.jpg" alt="Profile Picture">
-                <h2>Hello, my name is Rizky</h2>
             </div>
-            <div class="description">
-                <p>My name is Rizky Wahyu Kristiawan a final semester studentPamulang University</p>
-            </div>
+            <p>My name is Rizky Wahyu Kristiawan a final semester studentPamulang University</p>
         </div>
     </section>
 
     <section id="materials">
-    <div class="container">
-        <h2>Materials</h2>
-        <div class="material">
-                <h3> Meeting 11 - Listening: Short Conversation on Idioms</h3>
-                <p>In this meeting, we will focus on improving our listening skills by exploring short conversations related to idioms. Idioms are expressions that have figurative meanings different from their literal interpretations. Understanding idioms is essential for effective communication in English. Let's dive into the conversation and explore some commonly used idiomatic expressions.</p>
+        <div class="container">
+            <h2>Materials</h2>
+            <div class="material">
+                <h3>Meeting 11 - Listening: Short Conversation on Idioms</h3>
+                <p>In this meeting, we will focus on improving our listening skills by exploring short conversations related to idioms. Idioms are e</p>
                 <div class="video-container">
-                    <iframe class="video" src="https://youtu.be/Q8ny1srWhI4" frameborder="0"
-                        allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe class="video" src="https://youtu.be/Q8ny1srWhI4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="material">
-                <h3> Meeting 12 Listening - Long Conversation: Who, What, Where, When, Why, and How</h3>
+                <h3>Meeting 12 Listening - Long Conversation: Who, What, Where, When, Why, and How</h3>
                 <p>The long conversation in Meeting 12 focuses on gathering information using the six key questions: Who, What, Where, When, Why, and How. These questions are fundamental in understanding the details and context of any situation. Let's explore each question and its significance in extracting meaningful information.</p>
                 <div class="video-container">
-                    <iframe class="video" src="https://youtu.be/w67R3erZqUY" frameborder="0"
-                        allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe class="video" src="https://youtu.be/w67R3erZqUY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="material">
                 <h3>MEETING 13: LISTENING - LONG TALKS</h3>
                 <p>In this meeting, we will focus on listening to long talks. Long talks are extended presentations or speeches that provide detailed information on a specific topic. When listening to long talks, it is essential to gather comprehensive information by considering the following key elements: Who, What, Where, When, Why, and How. Let's explore each element in detail</p>
                 <div class="video-container">
-                    <iframe class="video" src="https://youtu.be/tusgey5dSzQ" frameborder="0"
-                        allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe class="video" src="https://youtu.be/tusgey5dSzQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -70,11 +65,9 @@
         <div class="container">
             <h2>Contact</h2>
             <div class="contact-icons">
-                <a href="https://instagram.com/iamrizkywahyukristiawan?igshid=NGExMmI2YTkyZg==" target="_blank"><img src="instagram.png"
-                        alt="Instagram"></a>
+                <a href="https://instagram.com/iamrizkywahyukristiawan?igshid=NGExMmI2YTkyZg==" target="_blank"><img src="instagram.png" alt="Instagram"></a>
                 <a href="https://wa.me/6289605591892" target="_blank"><img src="whatsapp.png" alt="WhatsApp"></a>
-                <a href="https://www.linkedin.com/in/rizkywk/" target="_blank"><img src="linkedin.png"
-                        alt="LinkedIn"></a>
+                <a href="https://www.linkedin.com/in/rizkywk/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
             </div>
         </div>
     </section>
